--- a/_posts/2009-05-16-測試.md
+++ b/_posts/2009-05-16-測試.md
@@ -1,5 +1,5 @@
 ---
-title: "test"
+title: "測試"
 categories:
   - Edge Case
 tags:
@@ -8,7 +8,6 @@ tags:
   - edge case
   - lists
   - markup
-  - test
 ---
 
 Nested and mixed lists are an interesting beast. It's a corner case to make sure that
