--- a/_posts/2009-05-16-testtest.md
+++ b/_posts/2009-05-16-testtest.md
@@ -1,5 +1,5 @@
 ---
-title: "test"
+title: "testtest"
 categories:
   - Edge Case
 tags:
@@ -8,7 +8,6 @@ tags:
   - edge case
   - lists
   - markup
-  - test
 ---
 
 Nested and mixed lists are an interesting beast. It's a corner case to make sure that
@@ -68,4 +67,4 @@ Nested and mixed lists are an interesting beast. It's a corner case to make sure
   - [ ] Follow discussions
   - [x] Push new commits
 
-abcde123
+  testtest123
