(1) toc_sticky: true in _config.yml(2) modifiy image url in test1 post (3) delete Template.md (4)Create My First Post

--- a/_posts/2020-10-22-test1.md
+++ b/_posts/2020-10-22-test1.md
@@ -15,7 +15,7 @@ Nested and mixed lists are an interesting beast. It's a corner case to make sure
 
 * Lists within lists do not break the ordered list numbering order
 * Your list styles go deep enough.
-![DOING-GREAT.jpg](../assets/images/2020-10-22-test1/DOING_GREAT.jpg)
+![DOING-GREAT.jpg](../../../assets/images/2020-10-22-test1/DOING_GREAT.jpg)
 ### Ordered -- Unordered -- Ordered
 
 1. ordered item
